.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

Found AccessTransformer: jei_at.cfg
Found AccessTransformer: crafttweaker_at.cfg
:deobfCompileDummyTask
:getVersionJson
:extractUserdev UP-TO-DATE
:downloadClient SKIPPED
:downloadServer SKIPPED
:splitServerJar SKIPPED
:mergeJars SKIPPED
:applyBinaryPatches SKIPPED
:deobfProvidedDummyTask
:extractDependencyATs SKIPPED
:extractMcpData SKIPPED
:extractMcpMappings SKIPPED
:genSrgs SKIPPED
:deobfMcMCP SKIPPED
:sourceApiJava
:compileApiJavaC:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\mods\jei\commands\ConflictCommand.java:19: error: package mezz.jei.ingredients does not exist
import mezz.jei.ingredients.Ingredients;
                           ^
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\mods\jei\commands\ConflictCommand.java:20: error: package mezz.jei.plugins.vanilla.crafting does not exist
import mezz.jei.plugins.vanilla.crafting.CraftingRecipeCategory;
                                        ^
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\mods\jei\commands\ConflictCommand.java:21: error: package mezz.jei.plugins.vanilla.crafting does not exist
import mezz.jei.plugins.vanilla.crafting.TippedArrowRecipeWrapper;
                                        ^
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\mods\jei\recipeWrappers\BrewingRecipeCWrapper.java:13: error: package mezz.jei.plugins.vanilla.brewing does not exist
import mezz.jei.plugins.vanilla.brewing.BrewingRecipeWrapper;
                                       ^
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\mods\jei\recipeWrappers\BrewingRecipeCWrapper.java:17: error: cannot find symbol
public class BrewingRecipeCWrapper extends BrewingRecipeWrapper  {
                                           ^
  symbol: class BrewingRecipeWrapper
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\JMorph.java:3: error: package org.gradle.api does not exist
import org.gradle.api.DefaultTask;
                     ^
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\JMorph.java:4: error: package org.gradle.api.tasks does not exist
import org.gradle.api.tasks.*;
^
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\JMorph.java:15: error: cannot find symbol
public class JMorph extends DefaultTask {
                            ^
  symbol: class DefaultTask
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\MergeJarsTask.java:3: error: package org.gradle.api does not exist
import org.gradle.api.DefaultTask;
                     ^
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\MergeJarsTask.java:4: error: package org.gradle.api.tasks does not exist
import org.gradle.api.tasks.*;
^
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\MergeJarsTask.java:11: error: cannot find symbol
public class MergeJarsTask extends DefaultTask {
                                   ^
  symbol: class DefaultTask
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\JMorph.java:17: error: cannot find symbol
    @InputDirectory
     ^
  symbol:   class InputDirectory
  location: class JMorph
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\JMorph.java:20: error: cannot find symbol
    @InputFile
     ^
  symbol:   class InputFile
  location: class JMorph
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\JMorph.java:149: error: cannot find symbol
    @TaskAction
     ^
  symbol:   class TaskAction
  location: class JMorph
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\MergeJarsTask.java:13: error: cannot find symbol
    @InputFile
     ^
  symbol:   class InputFile
  location: class MergeJarsTask
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\MergeJarsTask.java:16: error: cannot find symbol
    @InputFile
     ^
  symbol:   class InputFile
  location: class MergeJarsTask
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\MergeJarsTask.java:19: error: cannot find symbol
    @OutputFile
     ^
  symbol:   class OutputFile
  location: class MergeJarsTask
C:\Users\Izumi\Documents\GitHub\RWBYM-2.0\build\sources\api\java\crafttweaker\tasks\MergeJarsTask.java:22: error: cannot find symbol
    @TaskAction
     ^
  symbol:   class TaskAction
  location: class MergeJarsTask
18 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileApiJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 11.444 secs
